同步上游并移植代码，发现悦灵出现了和SSCA一样的渲染bug